<resources>
    <string name="app_name">ConstraintLayout</string>
    <string name="enter_email">Enter Email</string>
    <string name="signup">Signup</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="user_name">User name</string>
    <string name="enter_password">Enter Password</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="chats">CHATS</string>
    <string name="status">STATUS</string>
    <string name="name1">Name1</string>
    <string name="name2">Name2</string>
    <string name="name3">Name3</string>
    <string name="name4">Name4</string>
    <string name="name5">Name5</string>
    <string name="calls">CALLS</string>
    <string name="image">image</string>
    <string name="how_are_you">How are you</string>
    <string name="time">10:30 A.M</string>
    <string name="_3">3</string>
    <string name="shedule_order">Shedule Order</string>
    <string name="order_type">Order Type</string>
    <string name="delivery">Delivery</string>
    <string name="search">Search</string>
    <string name="search_for_restarunt">Search for restarunt</string>
    <string name="_111_pillaiyar_kovil_street_n_computer_science">111,Pillaiyar Kovil Street-\n Computer Science</string>
    <string name="pizza_peddler">Pizza Peddler</string>
    <string name="programing">Programing :</string>

    <string-array name="Programing_Languages">
        <item>C</item>
        <item>C++</item>
        <item>Java</item>
        <item>Python</item>
        <item>Kotlin</item>
        <item>C#</item>
        <item>C</item>
        <item>C++</item>
        <item>Java</item>
        <item>Python</item>
        <item>Kotlin</item>
        <item>C#</item>
    </string-array>
</resources>