<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:id="@+id/FirstLayout"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:src="@drawable/left_arrow"
            android:contentDescription="@string/image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shedule_order"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstLayout"
        android:layout_marginTop="10dp"
        android:id="@+id/hLine"
        android:background="@color/gray"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hLine"
        android:id="@+id/txtOrder"
        android:text="@string/order_type"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOrder"
        android:id="@+id/SecondLayout"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/image_back">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/rotate_3d"
                android:contentDescription="@string/image"
                android:padding="10dp"
                android:layout_margin="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery"
                android:textSize="18sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/image_back">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/rotate_3d"
                android:contentDescription="@string/image"
                android:padding="10dp"
                android:layout_margin="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery"
                android:textSize="18sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/image_back">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/rotate_3d"
                android:contentDescription="@string/image"
                android:padding="10dp"
                android:layout_margin="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery"
                android:textSize="18sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/image_back">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/rotate_3d"
                android:contentDescription="@string/image"
                android:padding="10dp"
                android:layout_margin="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery"
                android:textSize="18sp"
                android:textColor="@color/black"/>

        </LinearLayout>



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SecondLayout"
        android:layout_marginTop="10dp"
        android:id="@+id/hLine2"
        android:background="@color/gray"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SecondLayout"
        android:layout_marginTop="10dp"
        android:id="@+id/hLine3"
        android:background="@color/gray"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hLine3"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/ThirdLayout"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@id/SixthLayout"
            app:startIconDrawable="@drawable/ic_baseline_search_24">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_for_restarunt"
                android:inputType="text"
                android:autofillHints="text"
                android:textSize="18sp"
                android:background="@color/light_gray"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/FourthLayout"
        app:layout_constraintTop_toBottomOf="@+id/ThirdLayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizza_peddler"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:drawableStart="@drawable/account"
            android:padding="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_111_pillaiyar_kovil_street_n_computer_science"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:textColor="@color/gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FourthLayout"
        android:id="@+id/FifthLayout"
        android:layout_marginStart="20dp"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizza_peddler"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:drawableStart="@drawable/account"
            android:padding="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_111_pillaiyar_kovil_street_n_computer_science"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:textColor="@color/gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FifthLayout"
        android:id="@+id/SixthLayout"
        android:layout_marginStart="20dp"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizza_peddler"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:drawableStart="@drawable/account"
            android:padding="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_111_pillaiyar_kovil_street_n_computer_science"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:textColor="@color/gray"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>